Task-50377: Fix the image display and the delete icon preview when editing an article that contains an illustrative image on mobile view

--- a/webapp/src/main/webapp/skin/less/news.less
+++ b/webapp/src/main/webapp/skin/less/news.less
@@ -3436,7 +3436,7 @@
 }
 @media screen and (max-width: 1025px) {
   #newsActivityComposer #newsForm .dropZone img {
-    height: 80px;
+    height: 250px;
   }
 
   .latestNewsContent {
